# NEPLg2

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Trunk.toml  build_log.txt  note.md  note.n.md  parser_ref.rs  plan.md  repo_metrics.ts  script.py  test_ref.nepl  tmp_list_test.nepl  todo.md  todo_kp.md  typecheck_ref.rs
.cargo/: config.toml
doc/: cli.md  debug.md  editor_extensions.md  error.md  llvm_ir_setup.md  lsp_api.md  memory_safety_compiler_design.md  move_effect_spec.md  new_tutorial_plan.md  (+10 more)
nepl-cli/: Cargo.toml
nepl-cli/src/: codegen_llvm.rs  main.rs
nepl-cli/tests/: deploy_script.rs
nepl-core/: Cargo.toml
nepl-core/src/: ast.rs  builtins.rs  codegen_llvm.rs  codegen_wasm.rs  compiler.rs  diagnostic.rs  diagnostic_ids.rs  effects.rs  error.rs  hir.rs  lexer.rs  lib.rs  loader.rs  log.rs  module_graph.rs  monomorphize.rs  name_resolve.rs  nm.rs  parser.rs  resolve.rs  runtime_helpers.rs  span.rs  target_precheck.rs  test_cases_neplg1.md  typecheck.rs  types.rs  wasm_shared.rs
nepl-core/src/passes/: codegen_precheck.rs  drop_insertion.rs  mod.rs  move_check.rs
nepl-core/tests/: block_if_semantics.rs  block_single_line.rs  debug_loader.rs  doc_comments.rs  drop.rs  functions.rs  generics.rs  harness.rs  if.rs  intrinsic.rs  kp.rs  llvmir.rs  loader_cycle.rs  move_check.rs  neplg2.rs  overload.rs  parse_if_debug.rs  parser_debug.rs  plan.rs  proptest.rs  recursive_type.rs  selfhost_req.rs  stdlib.rs  stdout.rs  string.rs  tuple_new_syntax.rs  tuple_old_syntax.rs  typeannot.rs
nepl-core/tests/fixtures/: stdout_ansi.nepl  stdout_color.nepl
(+459 files in other folders)
