[workspace]
members = ["nepl-core", "nepl-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
thiserror = "2.0.18"
wasm-encoder = "0.244.0"
walkdir = "2.5.0"
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
wasmi = "0.31.2"
wasm-bindgen = "0.2.108"
wasmprinter = "0.244.0"
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
rand = "0.8.5"
