[package]
name = "nepl-cli"
version = "0.1.0"
edition = "2021"
authors = ["NEPL Team"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
nepl-core = { path = "../nepl-core" }
wasmi.workspace = true
wasmprinter.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
