[package]
name = "nepl-core"
version = "0.1.0"
edition = "2021"
authors = ["NEPL Team"]

[dependencies]
thiserror.workspace = true
wasm-encoder.workspace = true
walkdir.workspace = true
wasmparser = "0.244"

[dev-dependencies]
wasmi.workspace = true
tempfile.workspace = true
rand.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2.17", features = ["js"] }
